--- a/it/404.html
+++ b/it/404.html
@@ -86,8 +86,8 @@
 <main class="direct-content">
   <section class="mono">
     <div class="text-elements">
-      <h1>404 Page not found</h1>
-      <div class="big-separator"></div>
+      <!--<h1>404 Page not found</h1>
+      <div class="big-separator"></div>-->
       <h2>Il nostro sito è attualmente<br>in costruzione</h2>
       <p>Ci scusiamo per il disagio...<br>Tieniti informato e vieni a trovarci di tanto in tanto per vedere se è cambiato qualcosa ;)</p>
       <div class="big-separator"></div>
