--- a/it/index.html
+++ b/it/index.html
@@ -148,7 +148,7 @@
       <img src="../library/home/pan-home-chisiamo.jpg">
     </div>
     <div class="text-elements">
-      <h1>Chi siamo</h1>
+      <!--<h1>Chi siamo</h1>-->
       <h2><span>P</span>rogetazzione<br><span>A</span>rchitettura <span>+</span><br><span>N</span>atura</h2>
       <p>PAN associati S.R.L. è una società fondata nel 2001 costituita da un gruppo multidisciplinare di professionisti che operano nei campi della progettazione architettonica e del paesaggio, fino alla pianificazione territoriale.</p>
       <p>La nostra missione è rivitalizzare spazi degradati, convertendoli in aree vivibili e sostenibili che siano di valore per le comunità locali.</p>
@@ -160,7 +160,7 @@
 <!--#2-->
   <section class="split">
     <div class="text-elements">
-      <h1>Cosa facciamo</h1>
+      <!--<h1>Cosa facciamo</h1>-->
       <h2>Le nostre aree di competenza</h2>
       <p>Attraverso un approccio multidisciplinare, la nostra attività si estende sia al settore pubblico che a quello privato, offrendo una gamma di servizi che copre tutte le fasi della progettazione, direzione lavori e coordinamento della sicurezza, sia durante la fase di progettazione che di esecuzione.</p>
       <p>Offriamo inoltre consulenze specialistiche nel settore ambientale e paesaggistico, tra cui studi di fattibilità, analisi agronomiche, botaniche e forestali, analisi e studi urbanistici, verifiche e studi ambientali per l’autorizzazione di piani e progetti.
@@ -233,7 +233,7 @@
       <img src="../library/home/pan-home-lavoraconnoi.jpg">
     </div>
     <div class="text-elements">
-      <h1>Collaborazioni</h1>
+      <!--<h1>Collaborazioni</h1>-->
       <h2>Hai qualcosa in&nbsp;+?<br>Lavora con noi!</h2>
       <p>Lo studio PAN è sempre alla ricerca di nuove figure brillanti e appassionate pronte a esplorare nuovi orizzonti e che possano arricchire il nostro team di professionisti per una collaborazione stimolante e a lungo termine.</p>
       <p>Sei motivato a dare forma al futuro attraverso la progettazione innovativa e sostenibile del paesaggio?</p>
