--- a/en/index.html
+++ b/en/index.html
@@ -148,7 +148,7 @@
       <img src="../library/home/pan-home-chisiamo.jpg">
     </div>
     <div class="text-elements">
-      <!--<h1>Who we are</h1>-->
+      <h1>Who we are</h1>
       <h2>Progetazzione<br>Architettura +<br>Natura</h2>
       <p>PAN associati S.R.L. is a company founded in 2001 made up of a multidisciplinary group of professionals who operate in the fields of architectural and landscape design, up to territorial planning.</p>
       <p>Our mission is to revitalize degraded spaces, converting them into livable and sustainable areas that are of value to local communities.</p>
@@ -160,7 +160,7 @@
 <!--#2-->
   <section class="split">
     <div class="text-elements">
-      <!--<h1>What do we do</h1>-->
+      <h1>What do we do</h1>
       <h2>Our areas of expertise</h2>
       <p>Through a multidisciplinary approach, our activity extends to both the public and private sectors, offering a range of services that covers all phases of design, construction management and safety coordination, both during the design and execution phases.</p>
       <p>We also offer specialist consultancy in the environmental and landscape sector, including feasibility studies, agronomic, botanical and forestry analyses, urban planning analyzes and studies, checks and environmental studies for the authorization of plans and projects.</p>
@@ -233,7 +233,7 @@
       <img src="../library/home/pan-home-lavoraconnoi.jpg">
     </div>
     <div class="text-elements">
-      <!--<h1>Collaborations</h1>-->
+      <h1>Collaborations</h1>
       <h2>Do you have something extra?<br>Work with us!</h2>
       <p>The PAN studio is always looking for new brilliant and passionate figures ready to explore new horizons and who can enrich our team of professionals for a stimulating and long-term collaboration.</p>
       <p>Are you motivated to shape the future through innovative and sustainable landscape design?</p>
