--- a/it/news.html
+++ b/it/news.html
@@ -29,7 +29,7 @@
   <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
   
   <div class="lang-switch" id="LS1">
-    <a href="../en/privacy">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="../en/news">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB1">
@@ -71,7 +71,7 @@
   </div>
   <a href="contatti">Contatti</a>
   <div class="lang-switch" id="LS2">
-    <a href="../en/privacy">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="../en/news">EN</a>&nbsp;&nbsp;|&nbsp;
     <a href="#">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB2">
@@ -84,22 +84,34 @@
 </div>
 
 <main class="direct-content">
-  <section class="mono">
+<!--#1-->
+  <section class="split" id="responsive-reverse">
+    <img class="nfs" src="../library/news/.jpg">
     <div class="text-elements">
-      <h2>Privacy and Cookie Policy</h2>
-      <p>Grazie per aver visitato panassociati.net. Rispettiamo la tua privacy e ci impegniamo a proteggere qualsiasi informazione tu possa fornire durante l'utilizzo del nostro sito web.</p>
-      <p>Raccolta e utilizzo delle informazioni:
-      <br>Non raccogliamo alcuna informazione personale dai visitatori del nostro sito web. Puoi navigare anonimamente sul nostro sito senza fornire alcun dettaglio personale.</p>
-      <p>Utilizzo dei cookie:
-      <br>Non utilizziamo cookie o altre tecnologie di tracciamento sul nostro sito web.</p>
-      <p>Link a siti di terze parti:
-      <br>Il nostro sito web potrebbe contenere collegamenti a siti web di terze parti per tua comodità o riferimento. Non siamo responsabili per le politiche sulla privacy o le pratiche di questi siti web.</p>
-      <p>Modifiche a questa informativa sulla privacy:
-      <br>Ci riserviamo il diritto di aggiornare o modificare la nostra informativa sulla privacy in qualsiasi momento. Eventuali modifiche saranno pubblicate su questa pagina.</p>
-      <p>Contattaci:
-      <br>Se hai domande sulla nostra informativa sulla privacy, ti preghiamo di contattarci al seguente indirizzo: <a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>.</p>
-      <div class="big-separator"></div>
-      <a href="index" class="classic-link">Ritorna a la home</a>
+      <h1>Pubblicazione</h1>
+      <h2>Titolo della pubblicazione</h2>
+      <p>Descrizione breve</p>
+      <p><a href="404" class="classic-link">Scopri di <span>+</span></a></p>
+    </div>
+  </section>
+<!--#2-->
+  <section class="split" id="responsive-reverse">
+    <img class="nfs" src="../library/news/.jpg">
+    <div class="text-elements">
+      <h1>Pubblicazione</h1>
+      <h2>Titolo della pubblicazione</h2>
+      <p>Descrizione breve</p>
+      <p><a href="404" class="classic-link">Scopri di <span>+</span></a></p>
+    </div>
+  </section>
+<!--#3-->
+  <section class="split" id="responsive-reverse">
+    <img class="nfs" src="../library/news/.jpg">
+    <div class="text-elements">
+      <h1>Pubblicazione</h1>
+      <h2>Titolo della pubblicazione</h2>
+      <p>Descrizione breve</p>
+      <p><a href="404" class="classic-link">Scopri di <span>+</span></a></p>
     </div>
   </section>
 </main>
