--- a/en/news.html
+++ b/en/news.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,8 +29,8 @@
   <a href="index"><img class="svg-img" src="../elements/pan_associati.svg" alt="Logo"></a>
   
   <div class="lang-switch" id="LS1">
-    <a href="../en/privacy">EN</a>&nbsp;&nbsp;|&nbsp;
-    <a href="#">IT</a>
+    <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="../it/news">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB1">
     <input type="checkbox" id="darkModeToggle" class="darkModeToggle">
@@ -41,16 +41,16 @@
   <div class="desktop-menu">
     <a href="404">Studio</a>
     <a href="news">News</a>
-    <a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
+    <a href="#" onclick="toggleMenu('servicesMenu', event);">Projects</a>
     <ul id="servicesMenu" class="dropdown-menu">
-      <li><a href="404">Tutti i progetti</a></li>
-      <li><a href="404">Rigenerazione spazi urbani</a></li>
-      <li><a href="404">Parchi e giardini</a></li>
-      <li><a href="404">Riqualificazione ambientale e paesaggistica</a></li>
-      <li><a href="404">Inserimento ambientale di infrastrutture</a></li>
-      <li><a href="404">Architettura</a></li>
+      <li><a href="404">All projects</a></li>
+      <li><a href="404">Regeneration of urban spaces</a></li>
+      <li><a href="404">Parks and gardens</a></li>
+      <li><a href="404">Environmental and landscape redevelopment</a></li>
+      <li><a href="404">Environmental insertion of infrastructures</a></li>
+      <li><a href="404">Architecture</a></li>
     </ul>
-    <a href="contatti">Contatti</a>
+    <a href="contact">Contact</a>
   </div>
 </header>
 
@@ -59,20 +59,20 @@
   <a href="404">Studio</a>
   <a href="news">News</a>
   <div class="sub-links">
-    <a href="#" onclick="toggleSubNav()">Progetti</a>
+    <a href="#" onclick="toggleSubNav()">Projects</a>
     <div id="subNavLinks" class="sub-nav-links">
-      <a href="404">Tutti i progetti</a>
-      <a href="404">Rigenerazione spazi urbani</a>
-      <a href="404">Parchi e giardini</a>
-      <a href="404">Riqualificazione ambientale e paesaggistica</a>
-      <a href="404">Inserimento ambientale di infrastrutture</a>
-      <a href="404">Architettura</a>
+      <a href="404">All projects</a>
+      <a href="404">Regeneration of urban spaces</a>
+      <a href="404">Parks and gardens</a>
+      <a href="404">Environmental and landscape redevelopment</a>
+      <a href="404">Environmental insertion of infrastructures</a>
+      <a href="404">Architecture</a>
     </div>
   </div>
-  <a href="contatti">Contatti</a>
+  <a href="contact">Contact</a>
   <div class="lang-switch" id="LS2">
-    <a href="../en/privacy">EN</a>&nbsp;&nbsp;|&nbsp;
-    <a href="#">IT</a>
+    <a href="#">EN</a>&nbsp;&nbsp;|&nbsp;
+    <a href="../it/news">IT</a>
   </div>
   <div class="DarkModeButton" id="DMB2">
     <input type="checkbox" id="darkModeToggle" class="darkModeToggle">
@@ -84,37 +84,49 @@
 </div>
 
 <main class="direct-content">
-  <section class="mono">
+<!--#1-->
+  <section class="split" id="responsive-reverse">
+    <img class="nfs" src="../library/news/.jpg">
     <div class="text-elements">
-      <h2>Privacy and Cookie Policy</h2>
-      <p>Grazie per aver visitato panassociati.net. Rispettiamo la tua privacy e ci impegniamo a proteggere qualsiasi informazione tu possa fornire durante l'utilizzo del nostro sito web.</p>
-      <p>Raccolta e utilizzo delle informazioni:
-      <br>Non raccogliamo alcuna informazione personale dai visitatori del nostro sito web. Puoi navigare anonimamente sul nostro sito senza fornire alcun dettaglio personale.</p>
-      <p>Utilizzo dei cookie:
-      <br>Non utilizziamo cookie o altre tecnologie di tracciamento sul nostro sito web.</p>
-      <p>Link a siti di terze parti:
-      <br>Il nostro sito web potrebbe contenere collegamenti a siti web di terze parti per tua comodità o riferimento. Non siamo responsabili per le politiche sulla privacy o le pratiche di questi siti web.</p>
-      <p>Modifiche a questa informativa sulla privacy:
-      <br>Ci riserviamo il diritto di aggiornare o modificare la nostra informativa sulla privacy in qualsiasi momento. Eventuali modifiche saranno pubblicate su questa pagina.</p>
-      <p>Contattaci:
-      <br>Se hai domande sulla nostra informativa sulla privacy, ti preghiamo di contattarci al seguente indirizzo: <a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>.</p>
-      <div class="big-separator"></div>
-      <a href="index" class="classic-link">Ritorna a la home</a>
+      <h1>Publication</h1>
+      <h2>Title of the pubblication</h2>
+      <p>Brief description</p>
+      <p><a href="404" class="classic-link">Learn more</a></p>
+    </div>
+  </section>
+<!--#2-->
+  <section class="split" id="responsive-reverse">
+    <img class="nfs" src="../library/news/.jpg">
+    <div class="text-elements">
+      <h1>Publication</h1>
+      <h2>Title of the pubblication</h2>
+      <p>Brief description</p>
+      <p><a href="404" class="classic-link">Learn more</a></p>
+    </div>
+  </section>
+<!--#3-->
+  <section class="split" id="responsive-reverse">
+    <img class="nfs" src="../library/news/.jpg">
+    <div class="text-elements">
+      <h1>Publication</h1>
+      <h2>Title of the pubblication</h2>
+      <p>Brief description</p>
+      <p><a href="404" class="classic-link">Learn more</a></p>
     </div>
   </section>
 </main>
 
 <footer>
   <div class="big-separator"></div>
-  <h2>Contatti</h2>
+  <h2>Contact</h2>
 
     <div class="footer-bottom">
         <div class="column">
-            <h1>Sede</h1>
+            <h1>Office</h1>
             <p><a class="text-link" href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6<br>20128 Milano (MI)<br>Italia</a></p>
         </div>
         <div class="column">
-            <h1>Dettagli</h1>
+            <h1>Infos</h1>
             <p>Tel:&nbsp;<a class="text-link" href="tel:0039022578982">0039 02 257 8982</a>
             <br>Email:&nbsp;<a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>
             <br>Pec:&nbsp;<a class="text-link" href="mailto:studio.panassociati@pec.it">studio.panassociati@pec.it</a></p>
