--- a/it/contatti.html
+++ b/it/contatti.html
@@ -40,7 +40,7 @@
   </div>
   <div class="desktop-menu">
     <a href="404">Studio</a>
-    <a href="404">News</a>
+    <a href="news">News</a>
     <a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
     <ul id="servicesMenu" class="dropdown-menu">
       <li><a href="404">Tutti i progetti</a></li>
@@ -57,7 +57,7 @@
 <!--MENU-->
 <div id="mySidenav" class="sidenav">
   <a href="404">Studio</a>
-  <a href="404">News</a>
+  <a href="news">News</a>
   <div class="sub-links">
     <a href="#" onclick="toggleSubNav()">Progetti</a>
     <div id="subNavLinks" class="sub-nav-links">
