--- a/en/news.html
+++ b/en/news.html
@@ -84,41 +84,11 @@
 </div>
 
 <main class="direct-content">
-<!--#1-->
-  <section class="split" id="responsive-reverse">
-    <img class="nfs" src="../library/news/.jpg">
-    <div class="text-elements">
-      <h1>Publication</h1>
-      <h2>Title of the pubblication</h2>
-      <p>Brief description</p>
-      <p><a href="404" class="classic-link">Learn more</a></p>
-    </div>
-  </section>
-<!--#2-->
-  <section class="split" id="responsive-reverse">
-    <img class="nfs" src="../library/news/.jpg">
-    <div class="text-elements">
-      <h1>Publication</h1>
-      <h2>Title of the pubblication</h2>
-      <p>Brief description</p>
-      <p><a href="404" class="classic-link">Learn more</a></p>
-    </div>
-  </section>
-<!--#3-->
-  <section class="split" id="responsive-reverse">
-    <img class="nfs" src="../library/news/.jpg">
-    <div class="text-elements">
-      <h1>Publication</h1>
-      <h2>Title of the pubblication</h2>
-      <p>Brief description</p>
-      <p><a href="404" class="classic-link">Learn more</a></p>
-    </div>
-  </section>
 </main>
 
 <footer>
   <div class="big-separator"></div>
-  <h2>Contact</h2>
+  <img class="svg-img" src="../elements/pan_associati_ext.svg">
 
     <div class="footer-bottom">
         <div class="column">
