--- a/it/contatti.html
+++ b/it/contatti.html
@@ -84,16 +84,26 @@
 </div>
 
 <main class="direct-content">
-  <section class="split">
+  <section class="tiers1">
+    <div class="text-elements">
+      <h2>Contact</h2>
+      <p>Siamo entusiasti di avere l'opportunità di connetterci con te. Qui, crediamo che ogni contatto sia una potenziale occasione di collaborazione e crescita reciproca.</p>
+      <p>Se sei curioso di conoscere meglio il nostro lavoro e il nostro approccio progettuale, ti invitiamo a visitare la sezione <a href="404">studio</a>. Qui potrai scoprire la nostra filosofia di lavoro e il nostro team.</p>
+      <p><a href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6 - 20128 Milano (MI) - Italia</a></p>
+      <p>Tel:&nbsp;<a class="text-link" href="tel:0039022578982">0039 02 257 8982</a>
+      <br>Email:&nbsp;<a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>
+      <br>Pec:&nbsp;<a class="text-link" href="mailto:studio.panassociati@pec.it">studio.panassociati@pec.it</a></p>
+      <p><a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a><br>&nbsp;<br>&nbsp;</p>
+    </div>
+  </section>
+<!--#2-->
+  <section class="tiers2">
     <div class="text-elements">
       <h2>Un idea?</h2>
-      <p>Siamo entusiasti di avere l'opportunità di connetterci con te. Qui, crediamo che ogni contatto sia una potenziale occasione di collaborazione e crescita reciproca.</p>
       <p>Se sei interessato/a a diventare parte della nostra squadra, esplorare le opportunità di collaborazione o semplicemente condividere idee e feedback, sei nel posto giusto. Siamo sempre alla ricerca di talenti appassionati e motivati che condividono la nostra visione.</p>
-      <p>Se sei curioso di conoscere meglio il nostro lavoro e il nostro approccio progettuale, ti invitiamo a visitare la sezione <a href="404">studio</a>. Qui potrai scoprire la nostra filosofia di lavoro e il nostro team.</p>
-    </div>
-    <div class="text-elements">
+      <div class="big-separator"></div>
       <h2>Scrivici!</h2>
-      <form action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?>" method="post">
+      <!--<form action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?>" method="post">-->
         <p>Nome:</p>
         <input class="fill" type="text" id="name" name="name" placeholder="Maria Rossi" required>
   
@@ -106,15 +116,13 @@
         <input class="send" type="submit" value="Submit">
       </form>
     </div>
-    
   </section>
-
-  <section class="split">
+<!--#3-->
+  <section class="tiers1">
     <div class="text-elements">
-      <h2>Hai qualcosa in +?</h2>
+      <h2>Hai qualcosa in più?</h2>
       <p>In un contesto collaborativo, PA+N Associati ti offre l'opportunità di far parte di un team dinamico, dove la tua crescita personale e professionale è al centro della nostra attenzione. Il nostro studio, focalizzato sull'innovazione e la ricerca, si impegna a trasformare ogni progetto in un'avventura di scoperta. Collaborerai con un gruppo di professionisti appassionati, impegnati nel plasmare il futuro dell'architettura attraverso la progettazione e la gestione dei progetti.</p>
-    </div>
-    <div class="text-elements">
+      <div class="big-separator"></div>
       <h2>Lavora con noi!</h2>
       <a href="404" class="classic-link">Architetto Senior</a>
       <a href="404" class="classic-link">Architetto Junior</a>
@@ -127,8 +135,8 @@
 
 <footer>
   <div class="big-separator"></div>
-  <h2>Contatti</h2>
-
+  <img class="svg-img" src="../elements/pan_associati_ext.svg">
+  
     <div class="footer-bottom">
         <div class="column">
             <h1>Sede</h1>
