--- a/it/index.html
+++ b/it/index.html
@@ -234,7 +234,7 @@
     </div>
     <div class="text-elements">
       <h1>Collaborazioni</h1>
-      <h2>Hai qualcosa in&nbsp;+?<br>Lavora con noi!</h2>
+      <h2>Hai qualcosa in più?<br>Lavora con noi!</h2>
       <p>Lo studio PAN è sempre alla ricerca di nuove figure brillanti e appassionate pronte a esplorare nuovi orizzonti e che possano arricchire il nostro team di professionisti per una collaborazione stimolante e a lungo termine.</p>
       <p>Sei motivato a dare forma al futuro attraverso la progettazione innovativa e sostenibile del paesaggio?</p>
       <p>Scopri come la tua visione può contribuire a plasmare ambienti memorabili e unisciti a noi in questa entusiasmante avventura. Visita la nostra sezione 'Lavora con noi' per saperne di più e inviaci la tua candidatura.</p>
@@ -265,7 +265,7 @@
   <div class="big-separator"></div>
   <div class="line-separator"></div>
   <div class="big-separator"></div>
-  <h2>Contatti</h2>
+  <img class="svg-img" src="../elements/pan_associati_ext.svg">
 
     <div class="footer-bottom">
         <div class="column">
