--- a/it/news.html
+++ b/it/news.html
@@ -118,8 +118,8 @@
 
 <footer>
   <div class="big-separator"></div>
-  <h2>Contatti</h2>
-
+  <img class="svg-img" src="../elements/pan_associati_ext.svg">
+  
     <div class="footer-bottom">
         <div class="column">
             <h1>Sede</h1>
