--- a/en/404.html
+++ b/en/404.html
@@ -98,7 +98,7 @@
 
 <footer>
   <div class="big-separator"></div>
-  <h2>Contact</h2>
+  <img class="svg-img" src="../elements/pan_associati_ext.svg">
 
     <div class="footer-bottom">
         <div class="column">
