--- a/en/index.html
+++ b/en/index.html
@@ -265,7 +265,7 @@
   <div class="big-separator"></div>
   <div class="line-separator"></div>
   <div class="big-separator"></div>
-  <h2>Contact</h2>
+  <img class="svg-img" src="../elements/pan_associati_ext.svg">
 
     <div class="footer-bottom">
         <div class="column">
