--- a/it/privacy.html
+++ b/it/privacy.html
@@ -106,7 +106,7 @@
 
 <footer>
   <div class="big-separator"></div>
-  <h2>Contatti</h2>
+  <img class="svg-img" src="../elements/pan_associati_ext.svg">
 
     <div class="footer-bottom">
         <div class="column">
