--- a/it/contatti.html
+++ b/it/contatti.html
@@ -84,7 +84,7 @@
 </div>
 
 <main class="direct-content">
-  <section class="tiers1">
+  <section class="mono">
     <div class="text-elements">
       <h2>Contact</h2>
       <p>Siamo entusiasti di avere l'opportunità di connetterci con te. Qui, crediamo che ogni contatto sia una potenziale occasione di collaborazione e crescita reciproca.</p>
@@ -97,13 +97,12 @@
     </div>
   </section>
 <!--#2-->
-  <section class="tiers2">
+  <section class="mono">
     <div class="text-elements">
       <h2>Un idea?</h2>
       <p>Se sei interessato/a a diventare parte della nostra squadra, esplorare le opportunità di collaborazione o semplicemente condividere idee e feedback, sei nel posto giusto. Siamo sempre alla ricerca di talenti appassionati e motivati che condividono la nostra visione.</p>
-      <div class="big-separator"></div>
-      <h2>Scrivici!</h2>
-      <!--<form action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?>" method="post">-->
+      <h3>Scrivici!</h3>
+      <form action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]); ?>" method="post">
         <p>Nome:</p>
         <input class="fill" type="text" id="name" name="name" placeholder="Maria Rossi" required>
   
@@ -118,12 +117,11 @@
     </div>
   </section>
 <!--#3-->
-  <section class="tiers1">
+  <section class="mono">
     <div class="text-elements">
       <h2>Hai qualcosa in più?</h2>
       <p>In un contesto collaborativo, PA+N Associati ti offre l'opportunità di far parte di un team dinamico, dove la tua crescita personale e professionale è al centro della nostra attenzione. Il nostro studio, focalizzato sull'innovazione e la ricerca, si impegna a trasformare ogni progetto in un'avventura di scoperta. Collaborerai con un gruppo di professionisti appassionati, impegnati nel plasmare il futuro dell'architettura attraverso la progettazione e la gestione dei progetti.</p>
-      <div class="big-separator"></div>
-      <h2>Lavora con noi!</h2>
+      <h3>Lavora con noi!</h3>
       <a href="404" class="classic-link">Architetto Senior</a>
       <a href="404" class="classic-link">Architetto Junior</a>
       <a href="404" class="classic-link">Ufficio DL – Computista</a>
