--- a/it/news.html
+++ b/it/news.html
@@ -86,31 +86,31 @@
 <main class="direct-content">
 <!--#1-->
   <section class="split" id="responsive-reverse">
-    <img class="nfs" src="../library/news/.jpg">
-    <div class="text-elements">
+    <img class="newsfeed" src="../library/home/pan-home-architettura.jpg">
+    <div class="text-elements" id="newsfeed">
       <h1>Pubblicazione</h1>
-      <h2>Titolo della pubblicazione</h2>
-      <p>Descrizione breve</p>
+      <h3>Top Scape Paysage n° 53 ↗</h3>
+      <p>Parco della Pace In ipsum tortor, eleifend at sagittis vitae, ullamcorper vitae mauris. Cras ac viverra ante. Aliquam erat volutpat. Nunc id nulla nec elit gravida pulvinar. Fusce sollicitudin accumsan tempus. Curabitur id augue purus. Sed magna nulla, convallis eu congue eu, cursus scelerisque turpis. Nam ornare mi nec dui mollis, a malesuada nibh consequat. Duis in pretium nibh, in aliquam elit. Etiam quis elit nec leo hendrerit tincidunt. </p>
       <p><a href="404" class="classic-link">Scopri di <span>+</span></a></p>
     </div>
   </section>
 <!--#2-->
   <section class="split" id="responsive-reverse">
-    <img class="nfs" src="../library/news/.jpg">
-    <div class="text-elements">
-      <h1>Pubblicazione</h1>
-      <h2>Titolo della pubblicazione</h2>
-      <p>Descrizione breve</p>
+    <img class="newsfeed" src="../library/home/pan-home-architettura.jpg">
+    <div class="text-elements" id="newsfeed">
+      <h1>11.03.2024</h1>
+      <h3>Rivista Industria delle costruzioni n°493</h3>
+      <p>Parco della Pace In ipsum tortor, eleifend at sagittis vitae, ullamcorper vitae mauris. Cras ac viverra ante. Aliquam erat volutpat. Nunc id nulla nec elit gravida pulvinar. Fusce sollicitudin accumsan tempus. Curabitur id augue purus. Sed magna nulla, convallis eu congue eu, cursus scelerisque turpis. Nam ornare mi nec dui mollis, a malesuada nibh consequat. Duis in pretium nibh, in aliquam elit. Etiam quis elit nec leo hendrerit tincidunt. </p>
       <p><a href="404" class="classic-link">Scopri di <span>+</span></a></p>
     </div>
   </section>
 <!--#3-->
   <section class="split" id="responsive-reverse">
-    <img class="nfs" src="../library/news/.jpg">
-    <div class="text-elements">
+    <img class="newsfeed" src="../library/home/pan-home-architettura.jpg">
+    <div class="text-elements" id="newsfeed">
       <h1>Pubblicazione</h1>
-      <h2>Titolo della pubblicazione</h2>
-      <p>Descrizione breve</p>
+      <h3>Titolo della pubblicazione</h3>
+      <p>Descrizione breve In ipsum tortor, eleifend at sagittis vitae, ullamcorper vitae mauris. Cras ac viverra ante. Aliquam erat volutpat. Nunc id nulla nec elit gravida pulvinar. Fusce sollicitudin accumsan tempus. Curabitur id augue purus. Sed magna nulla, convallis eu congue eu, cursus scelerisque turpis. Nam ornare mi nec dui mollis, a malesuada nibh consequat. Duis in pretium nibh, in aliquam elit. Etiam quis elit nec leo hendrerit tincidunt. </p>
       <p><a href="404" class="classic-link">Scopri di <span>+</span></a></p>
     </div>
   </section>
