--- a/it/studio.html
+++ b/it/studio.html
@@ -84,6 +84,16 @@
 </div>
 
 <main class="direct-content">
+<!--#1-->
+  <section class="mono">
+    <div class="text-elements">
+      <h2>Studio</h2>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec laoreet nulla. Morbi ornare tempor quam, eget tempus est dictum ac. Nulla facilisi. Fusce vitae orci non justo finibus rutrum at id ex. Integer dapibus, ante quis volutpat vestibulum, erat orci gravida massa, sit amet sagittis lectus felis lacinia eros. Donec vestibulum, ligula eget cursus lobortis, enim nibh dapibus ante, in dictum purus lorem vel risus. Donec sed malesuada felis, in aliquam tellus. Nunc viverra, leo eu cursus placerat, augue ante dignissim ipsum, a varius augue leo in mauris.</p>
+      <p>Vestibulum consequat ipsum mi, semper mollis augue vulputate sit amet. Aenean feugiat eget arcu sed euismod. Fusce ac consequat justo. Aliquam egestas tortor et vulputate molestie. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec tristique rhoncus lacinia. Duis eleifend, dui vel iaculis tincidunt, ex diam tristique purus, quis efficitur velit libero ac orci. Morbi ultrices molestie lacus, vitae varius nisi tempor ac.</p>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec laoreet nulla. Morbi ornare tempor quam, eget tempus est dictum ac. Nulla facilisi. Fusce vitae orci non justo finibus rutrum at id ex. Integer dapibus, ante quis volutpat vestibulum, erat orci gravida massa, sit amet sagittis lectus felis lacinia eros. Donec vestibulum, ligula eget cursus lobortis, enim nibh dapibus ante, in dictum purus lorem vel risus. Donec sed malesuada felis, in aliquam tellus. Nunc viverra, leo eu cursus placerat, augue ante dignissim ipsum, a varius augue leo in mauris.</p>
+    </div>
+  </section>
+<!--#2-->
   <section>
     <div class="text-elements">
       <h2>Team</h2>
@@ -114,6 +124,39 @@
           <br>Ebeniste</p>
         </div>
       </div>
+    </div>
+  </section>
+<!--#3-->
+  <section class="mono">
+    <div class="text-elements">
+      <h2>Hanno lavorato con noi</h2>
+      <div id="list">
+        <p>Bernard Jacuemote</p>
+        <p>Bernard Jacuemote</p>
+        <p>Bernard Jacuemote</p>
+        <p>Bernard Jacuemote</p>
+        <p>Bernard Jacuemote</p>
+        <p>Bernard Jacuemote</p>
+        <p>Bernard Jacuemote</p>
+        <p>Bernard Jacuemote</p>
+        <p>Bernard Jacuemote</p>
+        <p>Bernard Jacuemote</p>
+        <p>Bernard Jacuemote</p>
+        <p>Bernard Jacuemote</p>
+        <p>Bernard Jacuemote</p>
+        <p>Bernard Jacuemote</p>
+      </div>
+    </div>
+  </section>
+<!--#1-->
+  <section class="mono">
+    <div class="text-elements">
+      <h2>Sezione al caso</h2>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec laoreet nulla. Morbi ornare tempor quam, eget tempus est dictum ac. Nulla facilisi. Fusce vitae orci non justo finibus rutrum at id ex. Integer dapibus, ante quis volutpat vestibulum, erat orci gravida massa, sit amet sagittis lectus felis lacinia eros. Donec vestibulum, ligula eget cursus lobortis, enim nibh dapibus ante, in dictum purus lorem vel risus. Donec sed malesuada felis, in aliquam tellus. Nunc viverra, leo eu cursus placerat, augue ante dignissim ipsum, a varius augue leo in mauris.</p>
+      <p>Vestibulum consequat ipsum mi, semper mollis augue vulputate sit amet. Aenean feugiat eget arcu sed euismod. Fusce ac consequat justo. Aliquam egestas tortor et vulputate molestie. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec tristique rhoncus lacinia. Duis eleifend, dui vel iaculis tincidunt, ex diam tristique purus, quis efficitur velit libero ac orci. Morbi ultrices molestie lacus, vitae varius nisi tempor ac.</p>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nec laoreet nulla. Morbi ornare tempor quam, eget tempus est dictum ac. Nulla facilisi. Fusce vitae orci non justo finibus rutrum at id ex. Integer dapibus, ante quis volutpat vestibulum, erat orci gravida massa, sit amet sagittis lectus felis lacinia eros. Donec vestibulum, ligula eget cursus lobortis, enim nibh dapibus ante, in dictum purus lorem vel risus. Donec sed malesuada felis, in aliquam tellus. Nunc viverra, leo eu cursus placerat, augue ante dignissim ipsum, a varius augue leo in mauris.</p>
+      <img id="partner" class="svg-img" src="../elements/accredia.svg">
+      <img id="partner" class="svg-img" src="../elements/sgs.svg">
     </div>
   </section>
 </main>
