--- a/it/studio.html
+++ b/it/studio.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-<header class="header">
+<header>
   <div id="burger" class="burger" onclick="toggleNav()">
     <div class="bar1"></div>
     <div class="bar2"></div>
