--- a/it/contatti.html
+++ b/it/contatti.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-<header class="header">
+<header>
   <div id="burger" class="burger" onclick="toggleNav()">
     <div class="bar1"></div>
     <div class="bar2"></div>
@@ -39,7 +39,7 @@
     </label>
   </div>
   <div class="desktop-menu">
-    <a href="404">Studio</a>
+    <a href="studio">Studio</a>
     <a href="news">News</a>
     <a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
     <ul id="servicesMenu" class="dropdown-menu">
@@ -56,7 +56,7 @@
 
 <!--MENU-->
 <div id="mySidenav" class="sidenav">
-  <a href="404">Studio</a>
+  <a href="studio">Studio</a>
   <a href="news">News</a>
   <div class="sub-links">
     <a href="#" onclick="toggleSubNav()">Progetti</a>
@@ -88,7 +88,7 @@
     <div class="text-elements">
       <h2>Contatti</h2>
       <p>Siamo entusiasti di avere l'opportunità di connetterci con te. Qui, crediamo che ogni contatto sia una potenziale occasione di collaborazione e crescita reciproca.</p>
-      <p>Se sei curioso di conoscere meglio il nostro lavoro e il nostro approccio progettuale, ti invitiamo a visitare la sezione <a href="404">studio</a>. Qui potrai scoprire la nostra filosofia di lavoro e il nostro team.</p>
+      <p>Se sei curioso di conoscere meglio il nostro lavoro e il nostro approccio progettuale, ti invitiamo a visitare la sezione <a href="studio">Studio</a>. Qui potrai scoprire la nostra filosofia di lavoro e il nostro team.</p>
       <p><a href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6 - 20128 Milano (MI) - Italia</a></p>
       <p>Tel:&nbsp;<a class="text-link" href="tel:0039022578982">0039 02 257 8982</a>
       <br>Email:&nbsp;<a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>
