--- a/it/index.html
+++ b/it/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-<header class="header">
+<header>
   <div id="burger" class="burger" onclick="toggleNav()">
     <div class="bar1"></div>
     <div class="bar2"></div>
@@ -39,7 +39,7 @@
     </label>
   </div>
   <div class="desktop-menu">
-    <a href="404">Studio</a>
+    <a href="studio">Studio</a>
     <a href="news">News</a>
     <a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
     <ul id="servicesMenu" class="dropdown-menu">
@@ -56,7 +56,7 @@
 
 <!--MENU-->
 <div id="mySidenav" class="sidenav">
-  <a href="404">Studio</a>
+  <a href="studio">Studio</a>
   <a href="news">News</a>
   <div class="sub-links">
     <a href="#" onclick="toggleSubNav()">Progetti</a>
@@ -257,21 +257,50 @@
 
 <footer>
   <img class="svg-img" src="../elements/pan_associati_ext.svg">
-  <div>
-    <p><a class="text-link" href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6 - 20128 Milano (MI) - Italia</a></p>
-    <p>Tel:&nbsp;<a class="text-link" href="tel:0039022578982">0039 02 257 8982</a>
-    <br>Email:&nbsp;<a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>
-    <br>Pec:&nbsp;<a class="text-link" href="mailto:studio.panassociati@pec.it">studio.panassociati@pec.it</a></p>
-    <p><a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a></p>
-
-    <p>PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="privacy">Privacy e Cookie Policy</a></p>
+  <div class="module">
+    <div>
+      <p><a class="text-link" href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6<br>20128 Milano (MI)<br>Italia</a></p>
+    </div>
+    <div>
+      <p>Tel:&nbsp;<a class="text-link" href="tel:0039022578982">0039 02 257 8982</a>
+      <br>Email:&nbsp;<a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>
+      <br>Pec:&nbsp;<a class="text-link" href="mailto:studio.panassociati@pec.it">studio.panassociati@pec.it</a></p>
+    </div>
+    <div>
+      <p><a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a></p>
+    </div>
   </div>
+  <div class="mega-separator"></div>
+  <p>PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="privacy">Privacy e Cookie Policy</a></p>
 </footer>
 
 <script>
+// HEADER MENU NAV
+
+function toggleNav() {
+  document.getElementById("burger").classList.toggle("change");
+  document.getElementById("mySidenav").classList.toggle("open");
+}
+
+function toggleSubNav() {
+  document.getElementById("subNavLinks").classList.toggle("show");
+}
+
+//DESKTOP MENU
+
+function toggleMenu(menuId, event) {
+event.preventDefault(); // Prevents the default behavior of the link
+var menu = document.getElementById(menuId);
+if (menu.style.display === "block") {
+  menu.style.display = "none";
+} else {
+  menu.style.display = "block";
+}
+}
+
 // DARK MODE
 document.addEventListener('DOMContentLoaded', function() {
-  const darkModeToggle = document.getElementById('darkModeToggle');
+  const darkModeToggles = document.querySelectorAll('.DarkModeButton input[type="checkbox"]');
   
   // Check if dark mode preference is stored in local storage
   const isDarkMode = localStorage.getItem('darkMode') === 'true';
@@ -279,7 +308,7 @@ document.addEventListener('DOMContentLoaded', function() {
   // Set initial dark mode state based on local storage
   if (isDarkMode) {
     document.body.classList.add('dark-mode');
-    darkModeToggle.checked = true;
+    darkModeToggles.forEach(toggle => toggle.checked = true);
   }
 
   // Toggle dark mode function
@@ -289,9 +318,10 @@ document.addEventListener('DOMContentLoaded', function() {
     document.body.classList.toggle('dark-mode');
   }
 
-  // Event listener for dark mode toggle switch
-  darkModeToggle.addEventListener('change', toggleDarkMode);
+  // Event listeners for dark mode toggle switches
+  darkModeToggles.forEach(toggle => toggle.addEventListener('change', toggleDarkMode));
 });
+
 
 //SLIDESHOWS
 
