--- a/it/privacy.html
+++ b/it/privacy.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-<header class="header">
+<header>
   <div id="burger" class="burger" onclick="toggleNav()">
     <div class="bar1"></div>
     <div class="bar2"></div>
@@ -39,7 +39,7 @@
     </label>
   </div>
   <div class="desktop-menu">
-    <a href="404">Studio</a>
+    <a href="studio">Studio</a>
     <a href="news">News</a>
     <a href="#" onclick="toggleMenu('servicesMenu', event);">Progetti</a>
     <ul id="servicesMenu" class="dropdown-menu">
@@ -56,7 +56,7 @@
 
 <!--MENU-->
 <div id="mySidenav" class="sidenav">
-  <a href="404">Studio</a>
+  <a href="studio">Studio</a>
   <a href="news">News</a>
   <div class="sub-links">
     <a href="#" onclick="toggleSubNav()">Progetti</a>
