--- a/it/studio.html
+++ b/it/studio.html
@@ -99,29 +99,54 @@
       <h2>Team</h2>
       <div class="container">
         <div class="item">
-          <img class="portrait" src="">
-          <p>Jean Bernard
-          <br>Ebeniste</p>
+          <img class="portrait" src="../library/studio/500x500.jpg">
+          <p>Gaetano Selleri</p>
+          <p class="note">Architetto</p>
         </div>
         <div class="item">
-          <img class="portrait" src="">
-          <p>Jean Bernard
-          <br>Ebeniste</p>
+          <img class="portrait" src="../library/studio/500x500.jpg">
+          <p>Gaetano Selleri</p>
+          <p class="note">Architetto</p>
         </div>
         <div class="item">
-          <img class="portrait" src="">
-          <p>Jean Bernard
-          <br>Ebeniste</p>
+          <img class="portrait" src="../library/studio/500x500.jpg">
+          <p>Benedetto Selleri</p>
+          <p class="note">Dottore forestale</p>
         </div>
         <div class="item">
-          <img class="portrait" src="">
-          <p>Jean Bernard
-          <br>Ebeniste</p>
+          <img class="portrait" src="../library/studio/500x500.jpg">
+          <p>Mario Poggi</p>
+          <p class="note">Ingegnere</p>
         </div>
         <div class="item">
-          <img class="portrait" src="">
-          <p>Jean Bernard
-          <br>Ebeniste</p>
+          <img class="portrait" src="../library/studio/500x500.jpg">
+          <p>Lucia Saja</p>
+          <p class="note"></p>
+        </div>
+        <div class="item">
+          <img class="portrait" src="../library/studio/500x500.jpg">
+          <p>Lorenzo Baldini</p>
+          <p class="note">Architetto paesaggista</p>
+        </div>
+        <div class="item">
+          <img class="portrait" src="../library/studio/500x500.jpg">
+          <p>Lorenzo Micucci</p>
+          <p class="note">Architetto</p>
+        </div>
+        <div class="item">
+          <img class="portrait" src="../library/studio/500x500.jpg">
+          <p>Gabriele Donzelli</p>
+          <p class="note">Architetto</p>
+        </div>
+        <div class="item">
+          <img class="portrait" src="../library/studio/500x500.jpg">
+          <p>Francesco Maglia</p>
+          <p class="note">Architetto paesaggista</p>
+        </div>
+        <div class="item">
+          <img class="portrait" src="../library/studio/500x500.jpg">
+          <p>Sara Valassina</p>
+          <p class="note">Interior and Spatial Designer </p>
         </div>
       </div>
     </div>
@@ -131,24 +156,54 @@
     <div class="text-elements">
       <h2>Hanno lavorato con noi</h2>
       <div id="list">
-        <p>Bernard Jacuemote</p>
-        <p>Bernard Jacuemote</p>
-        <p>Bernard Jacuemote</p>
-        <p>Bernard Jacuemote</p>
-        <p>Bernard Jacuemote</p>
-        <p>Bernard Jacuemote</p>
-        <p>Bernard Jacuemote</p>
-        <p>Bernard Jacuemote</p>
-        <p>Bernard Jacuemote</p>
-        <p>Bernard Jacuemote</p>
-        <p>Bernard Jacuemote</p>
-        <p>Bernard Jacuemote</p>
-        <p>Bernard Jacuemote</p>
-        <p>Bernard Jacuemote</p>
+        <p class="note">Raffaele Selleri</p>
+        <p class="note">Elena Manara</p>
+        <p class="note">Sara Vergani</p>
+        <p class="note">Mattia Locatelli</p>
+        <p class="note">Giulia Olivetti</p>
+        <p class="note">Maria Luisa Carloni</p>
+        <p class="note">Davide Bossi</p>
+        <p class="note">Boris Zlatkov</p>
+        <p class="note">Stefano Bianchi</p>
+        <p class="note">Agnese Schedoni</p>
+        <p class="note">Luca Ciliani</p>
+        <p class="note">Flavio Anglani</p>
+        <p class="note">Giulia Sicignano</p>
+        <p class="note">Simone Milani</p>
+        <p class="note">Flavia Iandoli</p>
+        <p class="note">Andrea Piantoni</p>
+        <p class="note">Pietro Amato</p>
+        <p class="note">Gwenaëlle Charrier</p>
+        <p class="note">Gaia Pozzi</p>
+        <p class="note">Valentina Bacco</p>
+        <p class="note">Sofia Parolini</p>
+        <p class="note">Chiara Osticioli</p>
+        <p class="note">Roberto Colombani</p>
+        <p class="note">Benedetta Concetti</p>
+        <p class="note">Carine Deschamps</p>
+        <p class="note">Elena Soldati</p>
+        <p class="note">Stefano Diene</p>
+        <p class="note">Camilla Escobar</p>
+        <p class="note">Valentina Fermi</p>
+        <p class="note">Mauro Fassino</p>
+        <p class="note">Roberta Galeni</p>
+        <p class="note">Benedetta Govi</p>
+        <p class="note">Elena Guiscardo</p>
+        <p class="note">Giampaolo Manfrini</p>
+        <p class="note">Diletta Masiello</p>
+        <p class="note">Amanda Molinelli</p>
+        <p class="note">Edgardo Pavesi</p>
+        <p class="note">Francesco Pastorelli</p>
+        <p class="note">Chiara Patti</p>
+        <p class="note">Angela Pignedoli</p>
+        <p class="note">Katia Scuteri</p>
+        <p class="note">Andrea Tosini</p>
+        <p class="note">Viola Corbari</p>
+        <p class="note">Alessio Carlini</p>
       </div>
     </div>
   </section>
-<!--#1-->
+<!--#4-->
   <section class="mono">
     <div class="text-elements">
       <h2>Sezione al caso</h2>
@@ -163,15 +218,21 @@
 
 <footer>
   <img class="svg-img" src="../elements/pan_associati_ext.svg">
-  <div>
-    <p><a class="text-link" href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6 - 20128 Milano (MI) - Italia</a></p>
-    <p>Tel:&nbsp;<a class="text-link" href="tel:0039022578982">0039 02 257 8982</a>
-    <br>Email:&nbsp;<a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>
-    <br>Pec:&nbsp;<a class="text-link" href="mailto:studio.panassociati@pec.it">studio.panassociati@pec.it</a></p>
-    <p><a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a></p>
-
-    <p>PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="privacy">Privacy e Cookie Policy</a></p>
+  <div class="module">
+    <div>
+      <p><a class="text-link" href="https://maps.app.goo.gl/4BmQPbvBmLEBtHKx5">Via Don Carlo Porro 6<br>20128 Milano (MI)<br>Italia</a></p>
+    </div>
+    <div>
+      <p>Tel:&nbsp;<a class="text-link" href="tel:0039022578982">0039 02 257 8982</a>
+      <br>Email:&nbsp;<a class="text-link" href="mailto:studio@panassociati.it">studio@panassociati.it</a>
+      <br>Pec:&nbsp;<a class="text-link" href="mailto:studio.panassociati@pec.it">studio.panassociati@pec.it</a></p>
+    </div>
+    <div>
+      <p><a href="https://www.facebook.com/panassociati/">Facebook</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UCbgIvdVyFjuWLhSequXO4Pg">Youtube</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a href="https://it.linkedin.com/company/pan-associati">LinkedIn</a></p>
+    </div>
   </div>
+  <div class="mega-separator"></div>
+  <p class="note">PAN Associati s.r.l.&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;© Copyright 2024&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;<a class="text-link" href="privacy">Privacy e Cookie Policy</a>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;Construit avec &#9825; par <a href="https://baptistelevaux.github.io/">BSL</a></p>
 </footer>
 
 <script>
